--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <button>Learn More</button>
             </div>
             <div class="why-web-dev-container-image">
-                <img src="../assets/Layer_1.png">
+                <img src="./assets/Layer_1.png">
             </div>
         </section>
         <section>
             <div class="why-web-dev-container">
                 <div class="why-web-dev-container-image">
-                    <img src="../assets/Group 3.png">
+                    <img src="./assets/Group 3.png">
                 </div>
             <div class="why-web-dev-container-text"> 
                 <h1>I will help People by creating Modern<br> Web System</h1>
