--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="banner-container">
             <div>
-                <img class="banner-image" src="../assets/Group.png">
+                <img class="banner-image" src="./assets/Group.png">
             </div>
             <div class="banner-content">
             
@@ -60,7 +60,7 @@
                 <button>Learn More</button>
             </div>
             <div class="why-web-dev-container-image">
-                <img src="../assets/Group 4.png">
+                <img src="./assets/Group 4.png">
             </div>
         </section>
 
@@ -81,19 +81,19 @@
 
         <div class="current-target-container">
             <div class="current-target target-backgroundcolor1">
-                <img src="../assets/html.png" alt="">
+                <img src="./assets/html.png" alt="">
                 <h4 class="current-target-title">HTML</h4>
                 <p class="current-target-description">The primary purpose of HTML in web development is to provide a standardized way of organizing and presenting information on the internet. </p>
                 <a class="learn-more" href="">learn more</a>
             </div>
             <div class="current-target">
-                <img src="../assets/css.png" alt="">
+                <img src="./assets/css.png" alt="">
                 <h4 class="current-target-title">CSS</h4>
                 <p class="current-target-description">CSS provides a way to define and apply styles consistently across all pages of a website, making it easier for developers to maintain and update their designs.</p>
                 <a class="learn-more" href="">learn more</a>
             </div>
             <div class="current-target">
-                <img src="../assets/js.png" alt="">
+                <img src="./assets/js.png" alt="">
                 <h4 class="current-target-title">JavaScript</h4>
                 <p class="current-target-description">One of the fundamental roles of JavaScript in web development is to enable interactivity on websites. </p>
                 <a class="learn-more" href="">learn more</a>
@@ -126,9 +126,9 @@
         <div class="footer">
             <div><h3>An Open Commitment by Awlad Hossain</h3></div>
             <div>
-                <a href=""><img src="../assets/facebook.png" alt=""></a>
-                <a href=""> <img src="../assets/github.png" alt=""></a>
-                <a href=""> <img src="../assets/linkedin-icon 1.png" alt=""></a>
+                <a href=""><img src="./assets/facebook.png" alt=""></a>
+                <a href=""> <img src="./assets/github.png" alt=""></a>
+                <a href=""> <img src="./assets/linkedin-icon 1.png" alt=""></a>
             </div>
         </div>
     </footer>
