final final final

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>  
         <section>
             <h3 class="current-target-title text-center">Why Web Development??</h3>
-            <p class="current-target-description text-center">If you're looking for a dull, mindless desk job, then keep looking because web development gives you plenty of opportunities to flex your creative muscles. A major part of a Web Developer's job is taking input from various sources and using their creativity to bring those ideas to life.</p>
+            <p class="current-target-description text-center paragraph">If you're looking for a dull, mindless desk job, then keep looking because web development gives you plenty of opportunities to flex your creative muscles. A major part of a Web Developer's job is taking input from various sources and using their creativity to bring those ideas to life.</p>
         </section>
         <section>
             <div class="why-web-dev-container">
@@ -46,8 +46,8 @@
                     <img src="./assets/Group 3.png">
                 </div>
             <div class="why-web-dev-container-text"> 
-                <h1>I will help People by creating Modern<br> Web System</h1>
-                <p>Web development is a career that teaches you new skills and ways to navigate the internet. It also teaches you how to make it easier for others </p>
+                <h1 paragraph>I will help People by creating Modern<br> Web System</h1>
+                <p paragraph>Web development is a career that teaches you new skills and ways to navigate the internet. It also teaches you how to make it easier for others </p>
                 <button>Learn More</button>
             </div>
             
@@ -70,7 +70,7 @@
             <h3 class="current-target-title text-center">My Inspiration</h3>
             <p class="current-target-description text-center">Jhankar Mahbub is not just a name, he is a symbol of inspiration for many aspiring programmers and tech enthusiasts in Bangladesh.</p>
             <diV class="jhankar">
-                <iframe width="1360" height="615" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=JhpitNMXtKpm6Kgj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="1160" height="615" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=JhpitNMXtKpm6Kgj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </diV>
 
         </section>
